[package]
name = "gamelogic"
version = "0.1.0"
edition = "2021"
description = "Game Logic system - Rust conversion of C++ GameLogic for Command & Conquer Generals Zero Hour"
authors = ["C&C Generals Zero Hour Rust Project"]


[dependencies]
# Core dependencies
thiserror = { workspace = true }
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
game_engine = { path = "../Common" }
game_network = { path = "../GameNetwork", optional = true }

# Math and geometry
glam = { version = "0.28", features = ["serde"] }
cgmath = "0.18"

# Synchronization and collections
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
slotmap = "1.0"

# Utilities
once_cell = "1.21"
lazy_static = "1.5"
uuid = { version = "1.18", features = ["v4"] }
bitflags = { version = "2.10", features = ["serde"] }
num_enum = "0.7"

bincode = "1.3"
crc32fast = "1.5"
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async support
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# For AI pathfinding algorithms
petgraph = "0.6"
pathfinding = "4.14"

# For SIMD optimizations
wide = { version = "0.7", optional = true }

# For parallel processing
rayon = "1.11"
num_cpus = "1.17"
nalgebra = "0.32"

# For spatial data structures
kdtree = { version = "0.6", optional = true }
rstar = { version = "0.10", optional = true }

# For physics calculations
rapier3d = { version = "0.17", optional = true }

# For scripting engine
rhai = { version = "1.23", features = ["sync"] }

# Optional profile integration (placeholder - will be implemented as needed)
# profile = { path = "../../Libraries/Source/WWVegas/WWDebug", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.9"
env_logger = "0.10"

[features]
default = ["async", "ai", "scripting", "legacy_port"]
# Compatibility flags mirroring legacy build defines for conditional code paths.
internal = []
count_script_usage = []
script_profiling = []
allow_debug_cheats = []
allow_surrender = []
scripting = []
async = []
network = ["dep:game_network"]
ai = []
debug = []
ai_dock = []

# AI features
ai-debug = ["ai"]
pathfinding-debug = []

# Module features
behaviors = []
updates = []
weapons = []
damage = []
modern_behaviors = []

# Performance and debugging features
dump_perf_stats = []
simd = ["wide"]
physics = ["rapier3d"]
spatial_optimization = ["kdtree", "rstar"]

# Transitional feature gate for the unfinished direct C++ port.
legacy_port = []
engine_tests = []
