[package]
name = "game_network"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "Modern networking system for Command & Conquer Generals Zero Hour"
license = "GPL-3.0"

[lib]
name = "game_network"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime and networking
tokio = { version = "1.48", features = ["full", "test-util"] }
async-trait = "0.1"

# WebSocket support
tungstenite = "0.20"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"
igd = { version = "0.12", default-features = false, features = ["aio"] }

# QUIC protocol for low-latency networking
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["std"] }
rcgen = "0.12"

# HTTP/gRPC for matchmaking services
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3" # MessagePack for efficient binary serialization

# Compression
flate2 = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Cryptography and security
ring = { version = "0.16", optional = true }
x25519-dalek = { version = "2.0", optional = true }
ed25519-dalek = { version = "2.2", optional = true }
rand = "0.8"
uuid = { version = "1.18", features = ["v4", "serde"] }
hex = "0.4"

# Additional utilities
crc32fast = "1.5"
byteorder = "1.5"
once_cell = "1.21"
if-addrs = "0.11"

# Connection pooling and rate limiting

# Error handling
thiserror = "1.0"

# Logging and metrics
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry_otlp = { version = "0.14", optional = true, package = "opentelemetry-otlp" }
tracing-opentelemetry = { version = "0.22", optional = true }
console-subscriber = { version = "0.2", optional = true }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# File operations

# Internal dependencies
# rust_game_engine = { path = "../rust_game_engine" }
game_engine = { path = "../Common" }

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "network_benchmarks"
harness = true

[features]
default = ["secure", "compression", "metrics"]
secure = ["dep:ring", "dep:x25519-dalek", "dep:ed25519-dalek"]
compression = ["dep:flate2", "dep:zstd", "dep:lz4_flex"]
metrics = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry_otlp",
    "dep:tracing-opentelemetry",
    "dep:console-subscriber"
]
mdns = []
webrtc = []  # Optional WebRTC support
internal = []
nightly_bench = []

[target.'cfg(unix)'.dependencies]
socket2 = { version = "0.5", features = ["all"] }
