[workspace]
members = [
    "AssetPipeline",
    "Compression",
    "Compression/EAC",
    "Compression/LZHCompress",
    "Compression/ZLib",
    "Template",
    "WPAudio",
    "WPAudio/shared",
    "WWVegas/WWLib",
    "WWVegas/WWLib/base_types",
    "WWVegas/WWLib/string_system",
    "WWVegas/WWLib/memory_system",
    "WWVegas/WWLib/ini_parser",
    "WWVegas/WWMath",
    "WWVegas/WWAudio",
    "WWVegas/WWDebug",
    "WWVegas/WWDownload",
    "WWVegas/WWFileSystem",
    "WWVegas/WWSaveLoad",
    "WWVegas/wwshade",
    "WWVegas/WW3DCore",
]
resolver = "2"

[workspace.dependencies]
# Core shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# Math and utilities
glam = "0.28"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }

# Performance
rayon = "1.10"
criterion = "0.5"

[workspace.metadata]
authors = ["GeneralsRust Team"]
description = "Complete library conversion suite for Command & Conquer Generals Zero Hour"
license = "GPL-3.0"
repository = "https://github.com/GeneralsRust"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
overflow-checks = true

[profile.bench]
debug = 1
