[package]
name = "world_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
ui_framework = { path = "../UIFramework" }

# Core dependencies
egui = { workspace = true }
eframe = { workspace = true }
winit = { workspace = true }

# 3D Graphics
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true, features = ["serde"] }
three-d = { workspace = true }

# File handling
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
rfd = { workspace = true }
walkdir = { workspace = true }

# Image processing
image = { workspace = true }

# Utilities
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Game engine integration
# Note: Temporarily commented out missing dependencies
# wwlib = { workspace = true }
# ww3d = { workspace = true }
# wwmath = { workspace = true }
# game_engine = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }

[[bin]]
name = "world_builder"
path = "src/main.rs"

[features]
default = ["terrain_editing", "object_placement", "script_editing"]
terrain_editing = []
object_placement = []
script_editing = []
advanced_lighting = []