[package]
name = "wpaudio"
version = "0.1.0"
edition = "2021"
authors = ["Westwood Studios", "Community Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/cnc-generals-zero-hour"
description = "Shared utilities for WestWood Studios library conversions"
keywords = ["utilities", "westwood", "cnc", "gamedev"]
categories = ["game-development", "data-structures"]

[lib]
name = "shared"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"