[package]
name = "eac_compression"
version = "2.0.0"
edition = "2021"
authors = ["GeneralsRust Team"]
description = "Modern Rust implementation of EA Compression (EAC) algorithms with SIMD optimizations"
license = "GPL-3.0"
repository = "https://github.com/GeneralsRust/EAC"

[features]
default = ["simd", "streaming"]
simd = ["wide"]
streaming = ["tokio"]
benchmarks = ["criterion"]
gpu_acceleration = ["wgpu", "bytemuck"]
internal = []

[dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"
byteorder = "1.5"
crc32fast = "1.4"
rayon = "1.10"
memmap2 = "0.9"

# SIMD optimizations
wide = { version = "0.7", optional = true }

# Async streaming
tokio = { version = "1.40", features = ["full"], optional = true }
futures = "0.3"

# GPU acceleration
wgpu = { version = "27.0.1", optional = true }
bytemuck = { version = "1.17", features = ["derive"], optional = true }

# Benchmarking
criterion = { version = "0.5", optional = true }

# Utilities
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "compression_benchmarks"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "simd_benchmarks" 
harness = false
required-features = ["simd", "benchmarks"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
